<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Edu4u</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_assignment">Assignment</string>
    <string name="menu_slideshow">Attendance</string>
    <string name="menu_myProfile">My Profile</string>
    <string name="menu_timetable">Time Table</string>
    <string name="menu_notices">Notices</string>
    <string name="menu_busTracking">Bus Tracking</string>

    <!--profile-->
    <string name="title_activity_profile">Profile</string>
    <string name="action_settingsProfile">Settings</string>
    <string name="account_info">Account Info</string>


    <!--string added by me-->
    <string name="err_msg_enter_email">Enter Email</string>
    <string name="err_msg_enter_password">Enter Password</string>
    <string name="please_wait">Please Wait</string>
    <string name="forget_password">Forget Password?</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="student_id">Student ID</string>
    <string name="_000">000</string>
    <string name="first_name">first_name</string>
    <string name="last_name">Last Name</string>
    <string name="i_m_a_student">I\'M A STUDENT</string>
    <string name="i_m_a_faculty_member">I\'M A Faculty Member</string>
    <string name="title_activity_faculty_dashboard">FacultyDashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="faculty_id">Faculty ID</string>



    <string-array name="Languages">
        <item>Java</item>
        <item>Kotlin</item>
        <item>Swift</item>
        <item>Python</item>
        <item>Scala</item>
        <item>Perl</item>
    </string-array>

</resources>